Ensure map is full-screen on mobile

--- a/web/cobrands/warwickshire/layout.scss
+++ b/web/cobrands/warwickshire/layout.scss
@@ -3,6 +3,8 @@
 
 
 #site-header {
+    border-top-width: 0;
+
     .navbar {
         margin-bottom: 0;
     }
